Rivalutazione criticità + fix

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -828,7 +828,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
 \subsection{Sprint 5}
 \textbf{Data di inizio:} 20-04-2022\\
 \textbf{Data di fine pianificata:} 27-04-2022\\
-\textbf{Data di fine effettiva:} N/A
+\textbf{Data di fine effettiva:} 27-04-2022
 
 \subsubsection{Pianificazione}\mbox{}
 
@@ -924,7 +924,19 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
     \mbox{}\\
 \end{center}
 
-Durante il ciclo di sprint 5 non sono state riscontrate alcune problematiche
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Problematiche riscontrate}}\\
+        \hline
+        \hline
+        \textbf{Problema} & \textbf{Soluzione adottata}\\
+        \hline
+        Una delle attività di aggiunta funzionalità alla web app (l'aggiunta dei bottoni di copia) è stata completata con un intero ciclo di ritardo senza alcuna causa che giustifichi tale ritardo. & I membri e le attività che essi devono svolgere saranno monitorate con più attenzione per evitare che ciò si ripeta in futuro. \\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
 
 \begin{center}
     \begin{tabularx}{\textwidth}{|X|X|}
@@ -934,7 +946,7 @@ Durante il ciclo di sprint 5 non sono state riscontrate alcune problematiche
         \hline
         \textbf{Nozione} & \textbf{Conseguenza sulla pianificazione}\\
         \hline
-        La parte della web app dedicata alla visualizzazione della lista delle transazioni è poco fruibile, seppur accessibil.e & Sono state create delle Issues per rendere la sezione più usabile da parte degli utenti e in generale per migliorare la grafica. Alcuni di questi cambiamenti potrebbero richiedere la modifica dell'Analisi dei Requisiti. \\
+        La parte della web app dedicata alla visualizzazione della lista delle transazioni è poco fruibile, seppur accessibile. & Sono state create delle Issues per rendere la sezione più usabile da parte degli utenti e in generale per migliorare la grafica. Alcuni di questi cambiamenti potrebbero richiedere la modifica dell'Analisi dei Requisiti. \\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
