Correzione errori verbale 27/04

--- a/docs/interni/verbali/2022_04_27_I/2022_04_27_I.tex
+++ b/docs/interni/verbali/2022_04_27_I/2022_04_27_I.tex
@@ -50,7 +50,7 @@ Per quanto riguarda invece la web app:
   \item è stata sistemata l'accessibilità;
   \item è stato aggiornato il logo;
   \item sono stati aggiunti i tasti di copia per gli address di venditore e acquirente;
-  \item è stato parzialemente sistemato il footer, il quale però richiede ulteriori modifiche;
+  \item è stato parzialmente sistemato il footer, il quale però richiede ulteriori modifiche;
   \item è stata eseguita la formattazione dei prezzi.
 \end{itemize}
 Tutte le tasks del ciclo di sprint 5 sono state completate.
@@ -60,17 +60,17 @@ Non sono sorte criticità durante il quinto ciclo di sprint.
 
 
 \subsection{Tasks per il ciclo di sprint 6}
-Il responsabile selezionato per il ciclo di sprint 5 è Andrea Volpe. \\
+Il responsabile selezionato per il ciclo di sprint 6 è Andrea Volpe. \\
 Sono state determinate le seguenti tasks per il ciclo di sprint 6:
 \begin{enumerate}
 	\item modificare la visualizzazione delle transazioni;
-  \item valutare ed eventualmente sistemare i link;
+  \item valutare ed eventualmente sistemare il link corrente nel menù di navigazione;
   \item aggiungere il breadcrumb;
   \item sistemare la visualizzazione della landing page;
-  \item sistemare i bottoni;
+  \item rendere i bottoni responsive;
   \item aggiungere l'id del prodotto nella lista di transazioni e dunque aggiornare il documento \textit{Analisi dei requisiti};
   \item aggiungere lo stato della transazione nella lista di transazioni;
-  \item sistemare il footer:
+  \item sistemare il footer: abbellire i link, aggiungere loghi xhtml, css e work on my machine.
 \end{enumerate}
 
 \section{Impegni presi}
@@ -81,7 +81,8 @@ L'assegnazione delle tasks ai membri per il ciclo di sprint 6 è avvenuta come s
   \item Elia Scandaletti: tasks 2 e 3;
   \item Raffaele Oliviero: tasks 5 e 6;
   \item Andrea Volpe: task 4;
-  \item Alberto Nicoletti: tasks 7 e 8;
+  \item Alberto Nicoletti: tasks 7 e 8.
 \end{itemize}
+Inoltre il gruppo ha preso l'impegno di contattare il proponente.
 
 \end{document}
