--- a/docs/interni/verbali/2022_04_27_I/2022_04_27_I.tex
+++ b/docs/interni/verbali/2022_04_27_I/2022_04_27_I.tex
@@ -70,7 +70,7 @@ Sono state determinate le seguenti tasks per il ciclo di sprint 6:
   \item rendere i bottoni responsive;
   \item aggiungere l'id del prodotto nella lista di transazioni e dunque aggiornare il documento \textit{Analisi dei requisiti};
   \item aggiungere lo stato della transazione nella lista di transazioni;
-  \item sistemare il footer: abbellire i link, aggiungere loghi xhtml, css e work on my machine.
+  \item sistemare il footer: abbellire i link, aggiungere loghi xhtml e css.
 \end{enumerate}
 
 \section{Impegni presi}
