--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -1023,13 +1023,9 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \hline
         \textbf{Problema} & \textbf{Misure di mitigazione}\\
         \hline
-        1) La modifica della presentazione delle transazioni potrebbe risultare poco fruibile.
-        2) Lo studio di fattibilità per valutare la possibilità di togliere i link circolari e
-        segnalare la pagina corrente potrebbe dare esito negativo.
-        & 
-        1) Tale modifica verrà scartata, mantenendo la presentazione delle transazioni attuale.
-        2) Le attività di rimozione link circolari e la segnalazione del link della pagina
-        corrente non verranno svolte.\\
+        La modifica della presentazione delle transazioni potrebbe risultare poco fruibile. & Tale modifica verrà scartata, mantenendo la presentazione delle transazioni attuale.\\
+        \hline
+        Lo studio di fattibilità per valutare la possibilità di togliere i link circolari e segnalare la pagina corrente potrebbe dare esito negativo. & Le attività di rimozione link circolari e la segnalazione del link della pagina corrente non verranno svolte.\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
