--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -25,6 +25,7 @@ Architettura del progetto
 \addversione{1.1.0}{03/04/2022}{E. Scandaletti, M. Galvagni}{Redazione}{Aggiunti dettagli dell'architettura.}
 \addversione{1.1.1}{13/04/2022}{Elia Scandaletti}{Redazione}{Aggiornamento link.}
 \addversione{1.2.0}{23/04/2022}{Giovanni Cocco}{Redazione}{Aggiornamento diagrammi.}
+\addversione{1.3.0}{29/04/2022}{Raffaele Oliviero}{Redazione}{Aggiornamento diagrammi.}
 
 \begin{document}
 
