--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -29,6 +29,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{2.3.0}{13/04/2022}{Federico Marchi}{Redazione}{Aggiornamento per ciclo 3.}
 \addversione{2.4.0}{20/04/2022}{Alberto Nicoletti}{Redazione}{Aggiornamento per ciclo 4.}
 \addversione{2.4.1}{21/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
+\addversione{2.5.0}{01/05/2022}{Raffaele Oliviero}{Redazione}{Aggiornamento per ciclo 5.}
 
 \begin{document}
 
@@ -123,6 +124,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-07, 66.92)
 					(2022-04-13, 68.26)
 					(2022-04-20, 69.12)
+					(2022-05-01, 64.06)
 				};\addlegendentry{Verbali interni}
 
 			\addplot coordinates {
@@ -131,6 +133,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-07, 55.19)
 					(2022-04-13, 55.15)
 					(2022-04-20, 55.15)
+					(2022-05-01, 56.08)
 				};\addlegendentry{Norme di progetto}
 
 		\end{axis}
@@ -184,6 +187,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-07, 55.17)
 					(2022-04-13, 55.53)
 					(2022-04-20, 55.53)
+					(2022-05-01, 56.32)
 				};\addlegendentry{Analisi dei requisiti}
 
 			\addplot coordinates {
@@ -192,6 +196,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-07, 42.58)
 					(2022-04-13, 43.22)
 					(2022-04-20, 42.18)
+					(2022-05-01, 47.69)
 				};\addlegendentry{Piano di progetto}
 
 			\addplot coordinates {
@@ -200,6 +205,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-07, 56.17)
 					(2022-04-13, 56.15)
 					(2022-04-20, 56.08)
+					(2022-05-01, 57.01)
 				};\addlegendentry{Piano di qualifica}
 
 		\end{axis}
@@ -433,6 +439,7 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-04-07, +14)
 					(2022-04-14, -9)
 					(2022-04-20, +22)
+					(2022-05-01, -6.5)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
@@ -440,6 +447,7 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-04-07, -18)
 					(2022-04-14, -15)
 					(2022-04-20, +15)
+					(2022-05-01, +5.5)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
@@ -502,6 +510,7 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-04-07, +18)
 					(2022-04-14, -8)
 					(2022-04-20, +23)
+					(2022-05-01, -36)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
@@ -509,6 +518,7 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-04-07, -29)
 					(2022-04-14, -16)
 					(2022-04-20, +15)
+					(2022-05-01, +27)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
